--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "groupchat-backend",
   "version": "1.0.0",
   "description": "Backend for GroupChat Now",
-  "main": "dist/server.js",
+  "main": "src/server.js",
+  "type": "module",
   "scripts": {
-    "dev": "nodemon src/server.ts",
+    "dev": "nodemon src/server.js",
     "build": "tsc",
     "start": "node dist/server.js",
     "clean": "rimraf dist"
